--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
         buildConfigField "String", "API_KEY", localProperties['applicationId']
         buildConfigField "String", "CLIENT_KEY", localProperties['clientKey']
+        buildConfigField "String", "YOUTUBE_KEY", localProperties['YouTubeKey']
 
     }
 
@@ -51,7 +52,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
     implementation "androidx.paging:paging-runtime:3.0.1"
     implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
+
+    implementation 'com.codepath.libraries:asynchttpclient:2.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
 }
