--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     implementation 'com.codepath.libraries:asynchttpclient:2.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
+
 }
